--- a/src/main/resources/templates/movie-listing.html
+++ b/src/main/resources/templates/movie-listing.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!-- Dodana przestrzeń nazw th -->
-<html lang="pl" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>MovieClub</title>
@@ -12,15 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <!-- Dynamicznie budowany adres do skryptu JS i arkusza stylów -->
     <script defer src="../static/scripts.js" th:src="@{/scripts/common.js}"></script>
-    <link rel="stylesheet" href="../static/styles.css" th:href="@{/styles/main.css}">
+    <link rel="stylesheet" href="../static/styles/main.css" th:href="@{/styles/main.css}">
 </head>
 <body>
 <div class="container">
     <ul class="menu">
         <li class="menu-logo-container">
-            <!-- Dynamicznie budowany adres do strony głównej -->
             <a href="#" th:href="@{/}">
                 <i class="fas fa-film logo"></i> MovieClub
             </a>
@@ -29,47 +26,38 @@
             <a href="#"><i id="toggle-icon" class="far fa-plus-square"></i></a>
         </li>
         <li class="menu-item">
-            <a href="#">Gatunki</a>
+            <a href="#">Genres</a>
         </li>
         <li class="menu-item">
-            <a href="#">Top10</a>
+            <a href="#">Top 10</a>
         </li>
         <li class="menu-item">
-            <a href="#">Zaloguj się</a>
+            <a href="#">Login</a>
         </li>
     </ul>
     <header class="jumbotron">
         <h1 class="jumbotron-header">Movie Club</h1>
         <p class="jumbotron-description">
-            Witaj w najlepszej bazie filmów w sieci. Oceniaj i dyskutuj o najnowszych produkcjach i klasykach kina.
+            Welcome to the best movie database on the web. Rate and discuss the latest productions and cinema classics.
         </p>
     </header>
     <main class="main-content">
-        <!-- Nagłówek pobieramy z modelu -->
-        <h2 class="list-heading" th:text="${heading}">Promowane filmy / Nazwa Kategorii</h2>
-        <!-- Opis pobieramy z modelu -->
-        <p class="list-description" th:text="${description}">Opis sekcji, przykładowo opis kategorii, albo strony głównej</p>
-        <!-- Zostawiamy tylko pierwszy element <li> -->
+        <h2 class="list-heading" th:text="${heading}">Featured Movies / Category Name</h2>
+        <p class="list-description" th:text="${description}">Section description, for example, category description or homepage description</p>
         <ul class="movie-list" th:remove="all-but-first">
-            <!-- Pętla po wszystkich filmach z modelu -->
             <li class="movie-list-item" th:each="movie: ${movies}">
-                <!-- Link do strony pojedynczego filmu typu /film/5 -->
                 <a href="#" th:href="@{|/film/${movie.id}|}">
-                    <!-- Po uruchomieniu aplikacji ścieżka do placeholdera plakatu wygląda nieco inaczej -->
                     <img src="../static/img/poster-placeholder.png"
                          th:src="@{/img/poster-placeholder.png}"
-                         alt="tytuł filmu"
+                         alt="movie title"
                          class="movie-list-item-poster">
                 </a>
                 <div class="movie-list-item-card">
                     <div class="movie-list-item-content">
                         <h3 class="movie-list-item-title">
-                            <!-- Link do strony pojedynczego filmu typu /film/5 -->
-                            <a href="#" th:href="@{|/film/${movie.id}|}" th:text="${movie.title}">Tytuł filmu</a>
+                            <a href="#" th:href="@{|/film/${movie.id}|}" th:text="${movie.title}">Movie Title</a>
                         </h3>
-                        <!-- Tytuł filmu -->
-                        <h4 th:text="${movie.originalTitle}">Angielski tytuł filmu</h4>
-                        <!-- Rok premiery filmu -->
+                        <h4 th:text="${movie.originalTitle}">Original Movie Title</h4>
                         <p th:text="${movie.releaseYear}">1999</p>
                     </div>
                     <div class="movie-list-item-rating">
@@ -81,15 +69,15 @@
             <li class="movie-list-item">
                 <a href="#">
                     <img src="../static/img/poster-placeholder.png"
-                         alt="tytuł filmu"
+                         alt="movie title"
                          class="movie-list-item-poster">
                 </a>
                 <div class="movie-list-item-card">
                     <div class="movie-list-item-content">
                         <h3 class="movie-list-item-title">
-                            <a href="#">Tytuł filmu</a>
+                            <a href="#">Movie Title</a>
                         </h3>
-                        <h4>Angielski tytuł filmu</h4>
+                        <h4>Original Movie Title</h4>
                         <p>1999</p>
                     </div>
                     <div class="movie-list-item-rating">
@@ -101,15 +89,15 @@
             <li class="movie-list-item">
                 <a href="#">
                     <img src="../static/img/poster-placeholder.png"
-                         alt="tytuł filmu"
+                         alt="movie title"
                          class="movie-list-item-poster">
                 </a>
                 <div class="movie-list-item-card">
                     <div class="movie-list-item-content">
                         <h3 class="movie-list-item-title">
-                            <a href="#">Tytuł filmu</a>
+                            <a href="#">Movie Title</a>
                         </h3>
-                        <h4>Angielski tytuł filmu</h4>
+                        <h4>Original Movie Title</h4>
                         <p>1999</p>
                     </div>
                     <div class="movie-list-item-rating">
@@ -120,9 +108,6 @@
             </li>
         </ul>
     </main>
-    <footer class="footer">
-        <p>MovieClub 2022 <i class="fas fa-copyright"></i> JavaStart.pl</p>
-    </footer>
 </div>
 </body>
 </html>
