--- a/src/main/resources/templates/movie-listing.html
+++ b/src/main/resources/templates/movie-listing.html
@@ -26,7 +26,7 @@
             <a href="#"><i id="toggle-icon" class="far fa-plus-square"></i></a>
         </li>
         <li class="menu-item">
-            <a href="#">Genres</a>
+            <a href="#" th:href="@{/genres}">Genres</a>
         </li>
         <li class="menu-item">
             <a href="#">Top 10</a>
