--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -32,6 +32,9 @@
             <a href="#">Top 10</a>
         </li>
         <li class="menu-item">
+            <a href="#" th:href="@{/admin}">Admin Panel</a>
+        </li>
+        <li class="menu-item">
             <a href="#">Login</a>
         </li>
     </ul>
