--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -220,3 +220,50 @@ a {
     padding: 16px;
     text-align: center;
 }
+
+textarea {
+    font-family: inherit;
+}
+.mc-form {
+    display: flex;
+    flex-direction: column;
+    margin: 0 32px;
+}
+.mc-form > * {
+    margin-top: 8px;
+}
+.mc-form > input,
+.mc-form > textarea,
+.mc-form > button {
+    font-size: 1.2rem;
+    color: black;
+    padding: 8px;
+}
+.mc-form > button {
+    margin-top: 16px;
+    background-color: white;
+    color: #ffc107;
+    border: none;
+}
+
+.notification-bar {
+    text-align: center;
+    background-color: #ffc107;
+    padding: 8px 0;
+}
+
+.mc-form > input,
+.mc-form > textarea,
+.mc-form > button,
+.mc-form > select {
+    font-size: 1.2rem;
+    color: black;
+    padding: 8px;
+}
+.mc-form > input[type=checkbox] {
+    transform: scale(1.5);
+    margin-left: 5px;
+}
+.mc-form > input[type=file] {
+    color: white;
+}
